feat : add auth and user swagger docummentation
